improve match view
