# server/api/api/openapi.yaml
@@ -77,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Match'
+                type: object
           description: ok
       security:
       - cookieAuth: []
@@ -170,6 +170,7 @@ components:
           - null
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           type: rated
+          status: requested
         - createdAt: 2000-01-23T04:56:07.000+00:00
           entries:
           - null
@@ -178,6 +179,7 @@ components:
           - null
           id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           type: rated
+          status: requested
         ranking:
         - score: 800
           name: bot example
@@ -236,6 +238,7 @@ components:
         - null
         id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         type: rated
+        status: requested
       properties:
         id:
           format: uuid
@@ -244,6 +247,12 @@ components:
           enum:
           - rated
           - unrated
+          type: string
+        status:
+          enum:
+          - requested
+          - ongoing
+          - finished
           type: string
         createdAt:
           format: date-time
@@ -257,6 +266,7 @@ components:
       required:
       - entries
       - id
+      - status
       - type
       type: object
     MatchEntry:
